<resources>
    <string name="app_name">dompetku</string>
    <string name="summary">Summary</string>
    <string name="Add_Transaction">Add Transaction</string>
    <string name="Edit_Transaction">Edit Transaction</string>
    <string name="Add_Item">Add Item</string>
    <string name="Edit_Item">Edit Item</string>
    <string name="Amount">Amount</string>
    <string name="Name">Name</string>
    <string name="Bought_a_movie_ticket">e.g Bought a movie ticket</string>
    <string name="Type">Type</string>
    <string name="Earning">Earning</string>
    <string name="Spending">Spending</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Pick_a_time">Pick a time</string>
    <string name="Confirm">Confirm</string>
</resources>
