<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".views.ui.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Amount"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/edit_text_add_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_edittext_amount"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:hint="Rp 0.00"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/edit_text_add_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edittext"
        android:hint="@string/Bought_a_movie_ticket"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Type"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/radio_add_earning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Earning" />

        <RadioButton
            android:id="@+id/radio_add_spending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Spending" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Date"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/editTextDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_edittext"
        android:clickable="true"
        android:focusable="false"
        android:hint="Pick a date" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Time"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/editTextTimePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_edittext"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/Pick_a_time" />

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:alignItems="center"
        app:justifyContent="center">

        <Button
            android:id="@+id/btn_add_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/Confirm"
            android:textColor="@color/cardview_light_background" />
    </com.google.android.flexbox.FlexboxLayout>
</LinearLayout>